@@ -32,6 +32,7 @@ static int au_wbr_fd(struct path *path)
 	struct file *h_file;
 	struct super_block *sb;
 	struct dentry *root;
+	struct au_branch *wbr;
 
 	err = get_unused_fd();
 	if (unlikely(err < 0))
@@ -46,14 +47,18 @@ static int au_wbr_fd(struct path *path)
 	sb = path->dentry->d_sb;
 	root = sb->s_root;
 	aufs_read_lock(root, AuLock_IR);
+	wbr = au_sbr(sb, wbi);
 	if (!(path->mnt->mnt_flags & MNT_READONLY)
-		&& !au_br_writable(au_sbr(sb, wbi)->br_perm)) {
+	    && !au_br_writable(wbr->br_perm)) {
 		bend = au_sbend(sb);
-		for (bindex = 1; bindex <= bend; bindex++)
-			if (au_br_writable(au_sbr(sb, bindex)->br_perm)) {
+		for (bindex = 1; bindex <= bend; bindex++) {
+			wbr = au_sbr(sb, bindex);
+			if (au_br_writable(wbr->br_perm)) {
 				wbi = bindex;
 				break;
 			}
+		}
+		wbr = au_sbr(sb, wbi);
 	}
 	AuDbg("wbi %d\n", wbi);
 	h_file = au_h_open(root, wbi, flags, NULL);
@@ -62,6 +67,7 @@ static int au_wbr_fd(struct path *path)
 	if (IS_ERR(h_file))
 		goto out_fd;
 
+	atomic_dec(&wbr->br_count); /* cf. au_h_open() */
 	fd_install(fd, h_file);
 	err = fd;
 	goto out; /* success */
